bk_ida/gccida/g1/expand_eh_region_end_cleanup
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_eh_region_end_cleanup/src/except.c:1220:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_eh_region_end_cleanup/src/except.c:1243:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_reg_rtx( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4)); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_eh_region_end_cleanup/src/except.c:1246:30: error: invalid suffix 'xmode' on integer constant
v6 = gen_reg_rtx( *(short *)0xmode); 
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_eh_region_end_cleanup/src/obj/except.o] Error 1
